--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <div id="countryContainer" class="row"></div>
     </div>
     <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
